--- a/index.html
+++ b/index.html
@@ -1,3 +1,47 @@
-<div class="navigation"></div>
-<div class="main"></div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>HTML + CSS</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+<nav class="menu">
+<div class="icon">My learning journal</div>
+<ul>
+    <il>HOME</il>
+    <il>ABOUT ME</il>
+</ul>
+</nav>
+<div class="main">
+<P>JULY 23, 2022</P>
+<h1>My new journey as a bootcamp student. </h1>
+<P>After several months of learning in the Frontend Developer Career Path, 
+    I've made the big jump over to the Bootcamp to get expert code reviews of my Solo Projects projects 
+    and meet like-minded peers.</P>
+<img src="images/article-image.png"/>
+
+<h2>How I stay committed to learning</h2>
+<br/>
+<p>I like to think of myself as a lifelong learner. 
+    I used to spend hours and hours learning, 
+    then try to create simple projects using 
+    what I learned or work new techniques into existing projects.
+<br/> 
+While that was fun, I felt like it would be helpful to share 
+what I was learning and most things about my journey with the world.
+</p>
+<h2>How I got started</h2>
+<p>
+    I started simple and gradually grew my learning journal site. 
+    I would take notes about what I was learning. After each learning session, 
+    I'd use my notes to not only reflect on 
+    what I learned but also write short summaries of what I learned using my own words.
+<br/>
+That helped me grok what I was learning, 
+and I realized that posting my learning summaries was also helping others learn and stay motivated.
+</p>
+</div>
+
 <div class="footer"></div>
+</body>
