--- a/index.html
+++ b/index.html
@@ -10,9 +10,50 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Blinker:wght@100;200;300;400;600;700;800;900&family=Gaegu&family=Gamja+Flower&family=Gugi&family=Hi+Melody&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+KR:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
   </head>
+
   <body>
-    <div class="menu"></div>
-    <div class="main"></div>
+    <header>
+    <div class="menu">
+      <nav>
+        <div class="icon">My learning journal</div>
+        <ul>
+            <il>HOME</il>
+            <il>ABOUT ME</il>
+        </ul>
+        </nav>        
+    </div>
+  </header>
+
+    <div class="main">
+ <P>JULY 23, 2022</P>
+<h1>My new journey as a bootcamp student. </h1>
+<P>After several months of learning in the Frontend Developer Career Path, 
+    I've made the big jump over to the Bootcamp to get expert code reviews of my Solo Projects projects 
+    and meet like-minded peers.</P>
+<img src="img/main.png"/>
+
+<h2>How I stay committed to learning</h2>
+
+<p>I like to think of myself as a lifelong learner. 
+    I used to spend hours and hours learning, 
+    then try to create simple projects using 
+    what I learned or work new techniques into existing projects.
+<br/> 
+While that was fun, I felt like it would be helpful to share 
+what I was learning and most things about my journey with the world.
+</p>
+<h2>How I got started</h2>
+<p>
+    I started simple and gradually grew my learning journal site. 
+    I would take notes about what I was learning. After each learning session, 
+    I'd use my notes to not only reflect on 
+    what I learned but also write short summaries of what I learned using my own words.
+<br/>
+That helped me grok what I was learning, 
+and I realized that posting my learning summaries was also helping others learn and stay motivated.
+</p>
+</div>
+    </div>
     <div class="navigation"></div>
     <div class="footer"></div>
   </body>
