[navigation/footer]html update
navigation, footer html 수정했습니다.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,24 @@ and I realized that posting my learning summaries was also helping others learn 
 </p>
 </div>
     </div>
-    <div class="navigation"></div>
-    <div class="footer"></div>
+    <div class="navigation">
+      <h3>Recent posts</h3>
+      <img src="img/desktop.png"/>
+      <img src="img/bulb.png"/>
+      <img src="img/purple.png"/>
+      <p>JULY 23, 2022</p>
+      <p>JULY 23, 2022</p>
+      <p>JULY 23, 2022</p>
+      <h2>Blog one</h2>
+      <h2>Blog Two</h2>
+      <h2>Blog Three</h2>
+      <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
+      <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
+      <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
+    </div>
+    <div class="footer">
+      <p>My Learning journal</p>
+      <p>Copyright 2022</p>
+    </div>
   </body>
 </html>
