--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
 
   <body>
     <header>
-    <div class="menu">
-      <nav>
-        <div class="icon">My learning journal</div>
-        <ul>
-            <il>HOME</il>
-            <il>ABOUT ME</il>
-        </ul>
-        </nav>        
-    </div>
-  </header>
+      <div class="container">
+        <div class="left">
+          <img class="logo" src="img/logo.png"/>
+          <span class="title">My learning journal</span>
+        </div>
+        <nav class="nav">
+          <ul>
+            <li>HOME</li>
+            <li>ABOUT ME</li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
     <div class="main">
  <P>JULY 23, 2022</P>
