[main] nav 메뉴 추가
posts 추가했습니다

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <nav class="nav">
           <ul>
             <li>HOME</li>
+            <li>POSTS</li>
             <li>ABOUT ME</li>
           </ul>
         </nav>
