--- a/index.html
+++ b/index.html
@@ -29,13 +29,18 @@
     </header>
 
     <div class="main">
+      <div class="text-center">
  <P>JULY 23, 2022</P>
 <h1>My new journey as a bootcamp student. </h1>
 <P>After several months of learning in the Frontend Developer Career Path, 
     I've made the big jump over to the Bootcamp to get expert code reviews of my Solo Projects projects 
     and meet like-minded peers.</P>
+  </div>
+  <div class="image-wrapper">
 <img src="img/main.png"/>
+</div>
 
+<div class="text-center">
 <h2>How I stay committed to learning</h2>
 
 <p>I like to think of myself as a lifelong learner. 
@@ -56,6 +61,7 @@ what I was learning and most things about my journey with the world.
 That helped me grok what I was learning, 
 and I realized that posting my learning summaries was also helping others learn and stay motivated.
 </p>
+</div>
 </div>
     </div>
     <div class="navigation">
