[navigation/footer]최종 수정
[navigation/footer] 최종 수정본 보냅니다.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ and I realized that posting my learning summaries was also helping others learn 
       </div>
     </div>
     <div class="footer">
-      <p>My Learning journal</p>
+      <p><strong>My Learning journal</strong></p>
       <p>Copyright 2022</p>
     </div>
   </body>
