--- a/indexfirst.html
+++ b/indexfirst.html
@@ -35,6 +35,48 @@
         <div class="image-wrapper">
             <img src="img/main.png"/>
         </div>
-    <div class="content"></div>
+    <div class="content">
+      <div class="blog">
+        <img class="article" src="img/desktop.png"/>
+        <p class="date">JULY 23, 2022</p>
+        <h2>Blog one</h2>
+        <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
+      </div>
+      <div class="blog">
+        <img class="article" src="img/bulb.png"/>
+        <p class="date">JULY 23, 2022</p>
+        <h2>Blog Two</h2>
+        <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
+      </div>
+      <div class="blog">
+        <img class="article" src="img/purple.png"/>
+        <p class="date">JULY 23, 2022</p>
+        <h2>Blog Three</h2>
+        <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
+      </div>
+      <div class="blog">
+        <img class="article" src="img/girl.png"/>
+        <p class="date">JULY 23,2022</p>
+        <h3> Blog four</h3>
+        <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
+      </div>
+      <div class="blog">
+        <img class="article" src="img/computer.png"/>
+        <p class="date"> JULY 23, 2022</p>
+        <h3> Blog five</h3>
+        <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
+      </div>
+      <div class="blog">
+        <img class="article" src="img/com.png">
+        <p class="date">JULY 23, 2022</p>
+        <h3>Blog six</h3>
+        <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
+      </div>
+    </div>
+    <div class="footer"> 
+      <p><strong>My Learning journal</strong></p>
+      <p>Copyright 2022</p>
+    </div>
+    </div>
     <div class="footer"></div>
 </body>
