--- a/index.html
+++ b/index.html
@@ -29,18 +29,17 @@
     </header> 
 
     <div class="main">
-      <div class="text-center">
+      <div class="text-center first-center">
+        <div class="word-center">
  <P>JULY 23, 2022</P>
 <h1>My new journey as a bootcamp student. </h1>
 <P>After several months of learning in the Frontend Developer Career Path, 
     I've made the big jump over to the Bootcamp to get expert code reviews of my Solo Projects projects 
     and meet like-minded peers.</P>
   </div>
-  <div class="image-wrapper">
-<img src="img/main.png"/>
-</div>
+  
 
-<div class="text-center">
+<div class="text-center second-center">
 <h2>How I stay committed to learning</h2>
 
 <p>I like to think of myself as a lifelong learner. 
