첫번째 페이지 content 최종
첫번째 페이지 content 최종입니다.

--- a/indexfirst.html
+++ b/indexfirst.html
@@ -34,9 +34,10 @@
         </div>
         <div class="image-wrapper">
             <img src="img/main.png"/>
+          </div>
         </div>
-      <div class="content">
-        <div class="blog blog1">
+        <div class="content">
+          <div class="blog blog1">
           <img class="article" src="img/desktop.png"/>
           <p class="date">JULY 23, 2022</p>
           <h2>Blog one</h2>
@@ -77,6 +78,5 @@
       <p><strong>My Learning journal</strong></p>
       <p>Copyright 2022</p>
     </div>
-    </div>
-    <div class="footer"></div>
 </body>
+</html>
