이미지 수정안
이미지 수정

--- a/indexfirst.html
+++ b/indexfirst.html
@@ -27,14 +27,13 @@
   </header> 
 <body>
     <div class="main">
-        <div class="text-center">
+        <div class="text-center first-center">
+          <div class="grid-content">
             <P>JULY 23, 2022</P>
             <h1>My new journey as a bootcamp student. </h1>
             <P>After several months of learning in the Frontend Developer Career Path, I've made the big jump over to the Bootcamp to get expert code reviews of my Solo Projects projects and meet like-minded peers.</P>
-        </div>
-        <div class="image-wrapper">
-            <img src="img/main.png"/>
-        </div>
+          </div>
+          </div>
       <div class="content">
         <div class="blog blog1">
           <img class="article" src="img/desktop.png"/>
