--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
       </div>
     </header> 
 
+    <div class="main-container">
     <div class="main">
-      <div class="text-center first-center">
+      <div class="text-center">
         <div class="word-center">
  <P>JULY 23, 2022</P>
 <h1>My new journey as a bootcamp student. </h1>
@@ -37,9 +38,10 @@
     I've made the big jump over to the Bootcamp to get expert code reviews of my Solo Projects projects 
     and meet like-minded peers.</P>
   </div>
-  
+      </div>
+<img class="image-wrapper" src="img/main.png"/>
 
-<div class="text-center second-center">
+<div class="text-center">
 <h2>How I stay committed to learning</h2>
 
 <p>I like to think of myself as a lifelong learner. 
@@ -88,5 +90,6 @@ and I realized that posting my learning summaries was also helping others learn 
       <p><strong>My Learning journal</strong></p>
       <p>Copyright 2022</p>
     </div>
+  </div>
   </body>
 </html>
