체크박스 추가
체크박스 추가했습니다 실행되는지 확인하심 됩니다

--- a/indexfirst.html
+++ b/indexfirst.html
@@ -36,6 +36,8 @@
             <img src="img/main.png"/>
           </div>
         </div>
+
+
         <div class="content">
           <div class="blog blog1">
           <img class="article" src="img/desktop.png"/>
@@ -55,6 +57,12 @@
           <h2>Blog three</h2>
           <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
         </div>
+      </div>
+
+      <input type="checkbox" class="toggle-more" />
+
+
+        <div class="more-blogs">
         <div class="blog blog4">
           <img class="article" src="img/girl.png"/>
           <p class="date">JULY 23,2022</p>
@@ -74,6 +82,10 @@
           <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
         </div>
       </div>
+
+      
+
+
     <div class="footer"> 
       <p><strong>My Learning journal</strong></p>
       <p>Copyright 2022</p>
