--- a/index.html
+++ b/index.html
@@ -10,35 +10,34 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Blinker:wght@100;200;300;400;600;700;800;900&family=Gaegu&family=Gamja+Flower&family=Gugi&family=Hi+Melody&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+KR:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
   </head>
-
-  <body>
-    <header>
-      <div class="container">
-        <div class="left">
-          <img class="logo" src="img/logo.png"/>
-          <span class="title">My learning journal</span>
-        </div>
-        <nav class="nav">
-          <ul>
-            <li>HOME</li>
-            <li>POSTS</li>
-            <li>ABOUT ME</li>
-          </ul>
-        </nav>
+  <header>
+    <div class="container">
+      <div class="left">
+        <img class="logo" src="img/logo.png"/>
+        <span class="title">My learning journal</span>
       </div>
-    </header> 
-
+      <nav class="nav">
+        <ul>
+          <li>HOME</li>
+          <li>POSTS</li>
+          <li>ABOUT ME</li>
+        </ul>
+      </nav>
+    </div>
+  </header> 
+  <body>
+    <div class="open-btn">&#9776;</div>
+        <nav class="nav">
+       <div class="close-btn">&times</div>
     <div class="main">
       <div class="text-center first-center">
         <div class="word-center">
- <P>JULY 23, 2022</P>
-<h1>My new journey as a bootcamp student. </h1>
-<P>After several months of learning in the Frontend Developer Career Path, 
+          <P>JULY 23, 2022</P>
+          <h1>My new journey as a bootcamp student. </h1>
+          <P>After several months of learning in the Frontend Developer Career Path, 
     I've made the big jump over to the Bootcamp to get expert code reviews of my Solo Projects projects 
     and meet like-minded peers.</P>
   </div>
-  
-
 <div class="text-center second-center">
 <h2>How I stay committed to learning</h2>
 
